--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.example.nesta=DEBUG
+
