--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,11 @@
-version: "3.8"
-services:
-  postgres:
-    image: postgres:15
-    container_name: nesta-db
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: nesta
-      POSTGRES_USER: nesta_admin
-      POSTGRES_PASSWORD: letmein
-    ports:
-      - "5432:5432"
-    volumes:
-      - pg_data:/var/lib/postgresql/data
+version: '3.9'
 
-volumes:
-  pg_data:
+services:
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.0.1
+    command: start-dev
+    ports:
+      - "8080:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
