--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=Nesta
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/nesta
-spring.datasource.username=nesta_admin
-spring.datasource.password=letmein
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.example.nesta=DEBUG
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/nesta-realm
+server.port=8082
+
+
 
