--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -5,3 +5,4 @@ spring.datasource.password=letmein
 
 # Keycloak
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/nesta-realm
+keycloak.token-url=http://keycloak:8080/realms/nesta-realm/protocol/openid-connect/token
