--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,16 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
             <version>3.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.flextrade.jfixture</groupId>
+            <artifactId>jfixture</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
