fix: keycloak admin config now uses base url which is determined by the running environment

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -4,5 +4,6 @@ spring.datasource.username=nesta_admin
 spring.datasource.password=letmein
 
 # Keycloak
+keycloak.base-url=http://keycloak:8080
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/nesta-realm
 keycloak.token-url=http://keycloak:8080/realms/nesta-realm/protocol/openid-connect/token
