--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <artifactId>modelmapper</artifactId>
             <version>3.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
