--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,9 +1,9 @@
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres:5432/nesta
-spring.datasource.username=nesta_admin
-spring.datasource.password=letmein
+spring.datasource.url=${DB_URL_DOCKER}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 
 # Keycloak
-keycloak.base-url=http://keycloak:8080
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/nesta-realm
-keycloak.token-url=http://keycloak:8080/realms/nesta-realm/protocol/openid-connect/token
+keycloak.base-url=${KC_URL_DOCKER}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KC_URL_DOCKER}/${KC_ISSUER_URI}
+keycloak.token-url=${KC_URL_DOCKER}/${KC_ISSUER_URI}/${KC_JWKS_URI}
