--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,27 @@
 spring.application.name=Nesta
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.schemas=public
+spring.flyway.default-schema=public
+spring.flyway.table=flyway_schema_history
+
+# P24 properties
+nesta.p24.base-url=${P24_BASE_URL}
+nesta.p24.crc-key=${P24_CRC_KEY}
+nesta.p24.merchant-id=${P24_MERCHANT_ID}
+nesta.p24.pos-id=${P24_POS_ID}
+nesta.p24.redirect-host=${P24_REDIRECT_HOST}
+nesta.p24.return-url=${P24_RETURN_URL}
+nesta.p24.status-url=${P24_STATUS_URL}
+nesta.p24.api-key=${P24_API_KEY}
 
 # Logging
 logging.level.root=DEBUG
