--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5433/nesta
-spring.datasource.username=nesta_admin
-spring.datasource.password=letmein
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 
 # Keycloak
 keycloak.base-url=http://localhost:8080
