moved some secrets out of code to .env file, adjusted urls for different dev profiles, added rentalInvoice repository

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     volumes:
       - ./keycloak:/opt/keycloak/data/import
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KEYCLOAK_ADMIN: ${KC_ADMIN_LOGIN}
+      KEYCLOAK_ADMIN_PASSWORD: ${KC_ADMIN_PASS}
 
   postgres:
     env_file: .env
