--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,9 +1,9 @@
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/nesta
+spring.datasource.url=${DB_URL_LOCAL}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 
 # Keycloak
-keycloak.base-url=http://localhost:8080
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/nesta-realm
-keycloak.token-url=http://localhost:8080/realms/nesta-realm/protocol/openid-connect/token
+keycloak.base-url=${KC_URL_LOCAL}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KC_URL_LOCAL}/${KC_ISSUER_URI}
+keycloak.token-url=${KC_URL_LOCAL}/${KC_ISSUER_URI}/${KC_JWKS_URI}
