--- a/.env.example
+++ b/.env.example
@@ -4,16 +4,19 @@ P24_REDIRECT_HOST=https://sandbox.przelewy24.pl
 P24_MERCHANT_ID=12345
 P24_POS_ID=12345
 P24_CRC_KEY=change_me
-
-# URL-e integracji
 P24_RETURN_URL=http://localhost:3000/payments/result
 P24_STATUS_URL=http://localhost:8082/api/payments/webhook/p24
 
 # === DATABASE ===
-DB_URL=jdbc:postgresql://localhost:5432/nesta
+DB_URL_LOCAL=jdbc:postgresql://localhost:5432/nesta
+DB_URL_DOCKER=jdbc:postgresql://postgres:5432/nesta
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
 # === SECURITY / KEYCLOAK ===
-KC_ISSUER_URI=http://localhost:8080/realms/nesta
-KC_JWKS_URI=http://localhost:8080/realms/nesta/protocol/openid-connect/certs
+KC_URL_LOCAL=http://localhost:8080
+KC_URL_DOCKER=http://keycloak:8080
+KC_ISSUER_URI=realms/nesta
+KC_JWKS_URI=protocol/openid-connect/certs
+KC_ADMIN_LOGIN=login
+KC_ADMIN_PASS=pass
