feat: upload images implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,13 @@ logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.example.nesta=DEBUG
 
+# Multipart
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+
+app.storage.root=uploads
+app.storage.public-base-path=/uploads
+app.storage.max-images-per-offer=20
+
 server.port=8082
