--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,23 @@
 # === PRZELEWY24 (SANDBOX) ===
 P24_BASE_URL=https://sandbox.przelewy24.pl/api/v1
-P24_REDIRECT_HOST=https://sandbox.przelewy24.pl
+P24_REDIRECT_HOST=https://redirect.url.frontend
 P24_MERCHANT_ID=12345
 P24_POS_ID=12345
 P24_CRC_KEY=change_me
-P24_RETURN_URL=http://localhost:3000/payments/result
-P24_STATUS_URL=http://localhost:8082/api/payments/webhook/p24
+P24_RETURN_URL=http://return.url.frontend
+P24_STATUS_URL=http://status.url
+P24_API_KEY=sample_key
 
 # === DATABASE ===
-DB_URL_LOCAL=jdbc:postgresql://localhost:5432/nesta
-DB_URL_DOCKER=jdbc:postgresql://postgres:5432/nesta
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_URL_LOCAL=jdbc:postgresql://name:port/database
+DB_URL_DOCKER=jdbc:postgresql://name:port/database
+DB_USERNAME=dbuser
+DB_PASSWORD=dbpassword
 
 # === SECURITY / KEYCLOAK ===
-KC_URL_LOCAL=http://localhost:8080
-KC_URL_DOCKER=http://keycloak:8080
-KC_ISSUER_URI=realms/nesta
+KC_URL_LOCAL=http://localurl:port
+KC_URL_DOCKER=http://dockerurl:port
+KC_ISSUER_URI=realms/realmname
 KC_JWKS_URI=protocol/openid-connect/certs
 KC_ADMIN_LOGIN=login
 KC_ADMIN_PASS=pass
