final changes to logout

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,6 @@ KC_URL_LOCAL=http://localurl:port
 KC_URL_DOCKER=http://dockerurl:port
 KC_ISSUER_URI=realms/realmname
 KC_JWKS_URI=protocol/openid-connect/certs
+KC_LOGOUT_URI=protocol/openid-connect/lo
 KC_ADMIN_LOGIN=login
 KC_ADMIN_PASS=pass
