--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,3 +7,4 @@ spring.datasource.password=${DB_PASSWORD:postgres}
 keycloak.base-url=${KC_URL_LOCAL}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KC_URL_LOCAL}/${KC_ISSUER_URI}
 keycloak.token-url=${KC_URL_LOCAL}/${KC_ISSUER_URI}/${KC_JWKS_URI}
+keycloak.logout-url=${KC_URL_DOCKER}/${KC_ISSUER_URI}/${KC_JWKS_URI}
