--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -7,4 +7,4 @@ spring.datasource.password=${DB_PASSWORD:postgres}
 keycloak.base-url=${KC_URL_DOCKER}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KC_URL_DOCKER}/${KC_ISSUER_URI}
 keycloak.token-url=${KC_URL_DOCKER}/${KC_ISSUER_URI}/${KC_JWKS_URI}
-keycloak.logout-url=${KC_URL_DOCKER}/${KC_ISSUER_URI}/${KC_JWKS_URI}
+keycloak.logout-url=${KC_URL_DOCKER}/${KC_ISSUER_URI}/${KC_LOGOUT_URI}
